--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <title>Embedded Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
+<a 
+  href="https://wa.me/91080558 00555(Dhiraj Khese)?text=Hi%20I%20want%20to%20book%20the%20turf.%20Please%20share%20available%20slots." 
+  target="_blank"
+  style="display:inline-block; padding:14px 22px; background:#25D366; color:#fff; text-decoration:none; border-radius:6px; font-weight:bold;">
+  Book on WhatsApp
+</a>
 <body style="margin:0; padding:0;">
   <iframe 
     src="https://content-craft-71.preview.emergentagent.com/" 
